exports[`#calculerLeNouveauScore Ferme un chiffre après 3 touches 1`] = `
Object {
  "15": Object {
    "ferme": false,
    "touches": 0,
  },
  "16": Object {
    "ferme": false,
    "touches": 0,
  },
  "17": Object {
    "ferme": false,
    "touches": 0,
  },
  "18": Object {
    "ferme": false,
    "touches": 0,
  },
  "19": Object {
    "ferme": false,
    "touches": 0,
  },
  "20": Object {
    "ferme": true,
    "touches": 3,
  },
  "25": Object {
    "ferme": false,
    "touches": 0,
  },
}
`;

exports[`#calculerLeNouveauScore N'augmente pas les touches d'un chiffre fermé 1`] = `
Object {
  "15": Object {
    "ferme": false,
    "touches": 0,
  },
  "16": Object {
    "ferme": false,
    "touches": 0,
  },
  "17": Object {
    "ferme": false,
    "touches": 0,
  },
  "18": Object {
    "ferme": false,
    "touches": 0,
  },
  "19": Object {
    "ferme": false,
    "touches": 0,
  },
  "20": Object {
    "ferme": true,
    "touches": 3,
  },
  "25": Object {
    "ferme": false,
    "touches": 0,
  },
}
`;

exports[`#calculerLeNouveauScore Ne pénalise pas les adversaires si le lancer ne ferme pas le chiffre 1`] = `
Array [
  Object {
    "cible": Object {
      "15": Object {
        "ferme": false,
        "touches": 0,
      },
      "16": Object {
        "ferme": false,
        "touches": 0,
      },
      "17": Object {
        "ferme": false,
        "touches": 0,
      },
      "18": Object {
        "ferme": false,
        "touches": 0,
      },
      "19": Object {
        "ferme": false,
        "touches": 0,
      },
      "20": Object {
        "ferme": false,
        "touches": 1,
      },
      "25": Object {
        "ferme": false,
        "touches": 0,
      },
    },
    "joueur": "J1",
    "points": 0,
  },
  Object {
    "cible": Object {
      "15": Object {
        "ferme": false,
        "touches": 0,
      },
      "16": Object {
        "ferme": false,
        "touches": 0,
      },
      "17": Object {
        "ferme": false,
        "touches": 0,
      },
      "18": Object {
        "ferme": false,
        "touches": 0,
      },
      "19": Object {
        "ferme": false,
        "touches": 0,
      },
      "20": Object {
        "ferme": false,
        "touches": 0,
      },
      "25": Object {
        "ferme": false,
        "touches": 0,
      },
    },
    "joueur": "J2",
    "points": 0,
  },
]
`;
